# ai-analytics-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/audit-logs/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/query/: page.tsx
apps/web/src/app/reports/: page.tsx
apps/web/src/app/users/: page.tsx
apps/web/src/components/charts/: query-volume-chart.tsx  report-chart.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
apps/web/src/lib/: api.ts
docs/: api.md
services/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260605_0001_create_users.py  20260605_0002_create_saved_reports.py  20260605_0003_create_audit_logs.py
services/api/app/: __init__.py  main.py
services/api/app/api/: deps.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/routers/: audit_logs.py  auth.py  health.py  queries.py  reports.py  users.py
services/api/app/cli/: __init__.py  bootstrap_admin.py
services/api/app/core/: config.py  security.py
services/api/app/db/: postgres.py  redis.py
services/api/app/models/: audit_log.py  saved_report.py  user.py
services/api/app/repositories/: audit_logs.py  reports.py  users.py
services/api/app/schemas/: audit.py  auth.py  query.py  reports.py  users.py
services/api/app/services/: query_execution.py  sql_generation.py
services/api/tests/: test_audit_logs.py  test_auth.py  test_bootstrap_admin.py  test_health.py  test_query_execution.py  test_reports.py  test_sql_generation.py  test_user_management.py
