[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-analytics-api"
version = "0.1.0"
description = "FastAPI service for the AI Analytics Platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "email-validator>=2.2.0",
  "fastapi>=0.128.0",
  "pwdlib[argon2]>=0.2.1",
  "pyjwt>=2.10.1",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.36",
  "sqlglot>=26.0.0",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4"
]

[project.scripts]
bootstrap-admin = "app.cli.bootstrap_admin:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
